# Mobile-Robotics-Project

./: Group 3_Project_Map.STL  README.md  frames_2025-08-08_17.26.12.gv  ocupancy.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_simulation_pkg/share/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_simulation_pkg/share/install/my_simulation_pkg/share/my_simulation_pkg/: package.xml
install/my_simulation_pkg/share/log/: latest_build
install/my_simulation_pkg/share/my_simulation_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_simulation_pkg/share/my_simulation_pkg/launch/: custom_world.launch.py
log/: latest_build
simulation/model/: model.config  model.sdf
simulation/model/my_map/: model.sdf
simulation/world/: your_world.world
src/my_simulation_pkg/: package.xml  setup.py
src/my_simulation_pkg/launch/: custom_world.launch.py
src/navigation_pkg/: CMakeLists.txt  package.xml
src/navigation_pkg/config/: nav2_params.yaml  updated_map.pgm  updated_map.yaml
src/navigation_pkg/launch/: nav2_waypoints.launch.py  navigation.launch.py  sim_nav_occ.launch.py
src/navigation_pkg/scripts/: multi_waypoint.py  nav_demo.py  occu_test.py  occupancy_updater.py  path_method_waypoint.py  single_goal_nav.py  test1.py  waypoint_follower.py
src/simulation_pkg/: CMakeLists.txt  package.xml
src/simulation_pkg/launch/: custom_world.launch.py  navigation.launch.py
src/simulation_pkg/map/: my_map.pgm
src/simulation_pkg/models/my_map/: model.sdf
src/simulation_pkg/models/my_map/meshes/: group3_project_map.stl
src/simulation_pkg/urdf/: turtlebot3_burger.urdf
src/tape_detector_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/tape_detector_pkg/launch/: tape_detector.launch.py
src/tape_detector_pkg/scripts/: detector_node.py  test.py
